# Anatomy_of_Robots

./: README.md
Laboratoria 1/: README.md
Laboratoria 1/catkin_ws/devel/: .catkin  _setup_util.py
Laboratoria 1/catkin_ws/devel/share/lab1/cmake/: lab1Config.cmake
Laboratoria 1/catkin_ws/devel/share/ourTurtle/cmake/: ourTurtleConfig.cmake
Laboratoria 1/catkin_ws/devel/share/turtle/cmake/: turtleConfig.cmake
Laboratoria 1/catkin_ws/src/lab1/: package.xml
Laboratoria 1/catkin_ws/src/lab1/launch/: lab1.launch
Laboratoria 1/catkin_ws/src/lab1/src/: test.py
catkin_ws/devel/: local_setup.sh  setup.sh
catkin_ws/devel/lib/pkgconfig/: lab1.pc  lab2.pc  ourTurtle.pc  turtle.pc
catkin_ws/devel/share/lab1/cmake/: lab1Config.cmake
catkin_ws/devel/share/lab2/cmake/: lab2Config.cmake
catkin_ws/src/lab1/src/: test.py
catkin_ws/src/lab2/: CMakeLists.txt  script.m
catkin_ws/src/lab2/src/: in.json  lab5.py  ocmd.py  oint_raf.py  out.yaml  program.py
catkin_ws/src/lab2/urdf/: robot.urdf
catkin_ws/src/lab3/launch/: lab3.launch
catkin_ws/src/lab3/src/: kdl.py  nonkdl.py  nonkdl_v2.py
lab1/: package.xml
lab1/launch/: lab1.launch
lab1/src/: test.py
lab2/: package.xml
lab2/launch/: display.launch
lab2/src/: jint.py  kdl.py  lab5.py  oint.py  script.m
lab2/urdf/: lab4.urdf  robot.urdf
lab3/launch/: lab3.launch
lab4/: CMakeLists.txt
lab4/src/: program.py
lab5/launch/: jint.launch  test.launch
lab5/src/: oint_raf.py
lab5/srv/: params_oint.srv
