<?xml version="1.0"?>
<package format="2">
  <name>lab1</name>
  <version>1.0.0</version>
  <description>Laboratorium 1</description>

  <maintainer email="mariusz.slapek@gmail.com">Mariusz Slapek</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>


  </export>
</package>
